--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<h1><title>Оглавление</title> </h1>
+<p><a name="top"></a></p>
+<h1>Оглавление</h1>
 
 <li><a href="#Заголовок 1">Заголовок 1</a></li>
 <li><a href="#Заголовок 2">Заголовок 2</a></li>
 <li><a href="#Заголовок 3">Заголовок 3</a></li>
 
-<p><a name="top"></a></p>
+
 
 <h2><a name="Заголовок 1"></a>Заголовок 1</h2>
 
@@ -26,8 +27,9 @@ Praesent porttitor a orci quis consequat. </p>
  
 <p><a href="#top">Наверх</a></p>
 
-<h2><a name="Заголовок 2"></a>Заголовок 2</h2>
+<h2>Заголовок 2</h2>
 
+<a name="Заголовок 2"></a>
 <p> Curabitur non risus placerat, consequat magna facilisis, accumsan risus. Vivamus pulvinar enim justo, in tristique orci egestas in. Sed in lectus id mi mollis faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean viverra, nibh a vehicula iaculis, tellus magna maximus lacus, venenatis dapibus dui lacus quis leo. Cras sagittis, turpis id consectetur vehicula, metus felis bibendum justo, et tempor mauris ligula eu dui. Aliquam ornare augue vitae lacus sodales hendrerit. Suspendisse malesuada ut lacus ut mattis. Quisque in enim pulvinar, posuere ligula in, porta erat. Proin sit amet velit in ante pellentesque varius. Etiam consectetur nulla eu commodo auctor. Proin dignissim interdum molestie.
 
 Phasellus feugiat risus eros, sed egestas augue congue non. Phasellus id nunc justo. Quisque ut est quam. Pellentesque tempus sit amet magna a scelerisque. Fusce id leo quis quam egestas viverra. Curabitur et volutpat lectus. Curabitur eu risus eget lectus pulvinar molestie sed non eros. Suspendisse potenti. Fusce laoreet nulla et neque facilisis, at placerat magna lacinia. Nunc bibendum eget tellus et laoreet. Nam et ante eget dolor sollicitudin eleifend at nec risus. Donec efficitur sit amet ipsum eget tincidunt. Duis rutrum eget leo quis tempus.
@@ -44,6 +46,8 @@ Cras hendrerit et odio eu ultrices. Vestibulum sit amet dolor sodales, posuere v
 
 Morbi sagittis sem sed euismod aliquam. Pellentesque tempor luctus libero. Duis non justo et tortor finibus dignissim non vel urna. Fusce in velit at neque interdum vehicula vitae eget turpis. Sed id imperdiet erat. Donec id eleifend felis, sit amet faucibus mi. Nam a ex eu mauris consequat mollis id vitae magna. Donec vel consectetur enim. In in aliquam purus. Nam aliquam tortor nec quam molestie, non placerat mauris euismod. Sed viverra sollicitudin orci, ut rhoncus eros rutrum nec. Fusce vehicula neque urna, sed varius velit maximus vel. Nulla id volutpat elit, id mollis turpis. Cras sollicitudin fringilla metus. Nulla fringilla nulla lectus, ac efficitur purus egestas quis. Aliquam convallis varius justo, vitae lacinia neque lobortis ut. </p>
 
+<p><a href="#top">Наверх</a></p>
+
 <h2><a name="Заголовок 3"></a>Заголовок 3</h2>
 
 <p>Curabitur eget suscipit ligula. Suspendisse sit amet vestibulum massa. Proin scelerisque nisl at posuere iaculis. Cras a lorem vel enim venenatis fringilla commodo nec mi. In neque quam, tincidunt ac dignissim at, fringilla id lectus. Mauris suscipit, nisi quis vehicula iaculis, quam risus rutrum nibh, luctus convallis ex odio quis leo. Etiam suscipit orci at ullamcorper congue.
@@ -51,6 +55,8 @@ Morbi sagittis sem sed euismod aliquam. Pellentesque tempor luctus libero. Duis 
 Pellentesque eu sodales nunc. Mauris in risus a nunc consectetur ultricies. Morbi vitae velit felis. Aliquam erat volutpat. Fusce eget vulputate velit. Etiam ac elit quis enim dignissim suscipit. Cras fringilla, nisl quis iaculis tempor, justo nisi imperdiet ipsum, vitae ornare arcu justo at odio. Pellentesque magna tortor, ultricies sit amet est quis, vulputate vulputate ex. Curabitur dictum lectus et lectus cursus ullamcorper. Vestibulum gravida euismod odio, vitae tincidunt est viverra pellentesque. Donec mauris magna, egestas vel dolor sed, egestas dapibus tellus. Sed nec lectus quis sem volutpat pharetra. 
 
 Phasellus eu ipsum sed arcu faucibus suscipit eget vitae dolor. Etiam lacinia lacinia nibh ac euismod. In vitae cursus purus. Nulla lacinia imperdiet sapien non interdum. Quisque ac ex in ante ultricies cursus ac et lectus. Nunc sollicitudin nulla quis vulputate efficitur. Pellentesque a sollicitudin neque, vel ultrices eros.</p>
+
+<p><a href="#top">Наверх</a></p>
 
 </body>
 
