--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <p><a name="top"></a></p>
+<p><a href="index2.html" target="_blank">Второй документ</a></p>
 <h1>Оглавление</h1>
 
 <li><a href="#Заголовок 1">Заголовок 1</a></li>
