--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h2><a name="Заголовок 1"></a>Заголовок 1</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce metus velit, rutrum vitae tristique vitae, accumsan at nisl. Integer non neque ut massa tempus hendrerit eget eu ligula. Pellentesque at interdum libero. Mauris dictum, libero vitae auctor blandit, arcu sapien luctus neque, quis convallis orci leo eu purus. Pellentesque sagittis elementum lacinia. Nulla sit amet molestie dolor. Fusce egestas mauris vitae metus aliquet euismod. Nulla eleifend hendrerit lorem at tempor. Donec luctus, libero non lobortis fringilla, ante sem faucibus mi, sed malesuada ante est non nibh. Praesent rhoncus rutrum dui, quis cursus turpis hendrerit eget. Suspendisse dictum magna eu ligula porttitor faucibus. Vivamus arcu purus, sollicitudin sit amet nisi consectetur, consequat fermentum turpis. Mauris iaculis velit sed libero consectetur, vitae suscipit nulla consequat. Nulla tempus turpis id neque varius pharetra. Vestibulum nec fringilla justo, eu porttitor nibh.
+<p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce metus velit, rutrum vitae tristique vitae, accumsan at nisl. Integer non neque ut massa tempus hendrerit eget eu ligula. Pellentesque at interdum libero. Mauris dictum, libero vitae auctor blandit, arcu sapien luctus neque, quis convallis orci leo eu purus. Pellentesque sagittis elementum lacinia. Nulla sit amet molestie dolor. Fusce egestas mauris vitae metus aliquet euismod. Nulla eleifend hendrerit lorem at tempor. Donec luctus, libero non lobortis fringilla, ante sem faucibus mi, sed malesuada ante est non nibh. Praesent rhoncus rutrum dui, quis cursus turpis hendrerit eget. Suspendisse dictum magna eu ligula porttitor faucibus. Vivamus arcu purus, sollicitudin sit amet nisi consectetur, consequat fermentum turpis. Mauris iaculis velit sed libero consectetur, vitae suscipit nulla consequat. Nulla tempus turpis id neque varius pharetra. Vestibulum nec fringilla justo, eu porttitor nibh.
 
 Ut non fermentum ex. Vestibulum nunc sapien, varius in quam condimentum, hendrerit imperdiet sapien. Nunc ex tortor, egestas sit amet porta nec, vehicula sed lorem. Maecenas tempus pretium accumsan. Proin vitae ullamcorper felis. Quisque malesuada pretium massa a tempor. Maecenas congue lectus nibh, et varius risus pulvinar nec. Nulla lacinia magna felis, in ultrices ipsum tempor vitae. Praesent magna lacus, euismod et dui eget, consectetur placerat magna. Vestibulum convallis enim vitae ipsum lacinia, vitae dapibus mi mollis. Fusce vitae sem ligula.
 
@@ -26,12 +26,12 @@ Aenean ut nulla venenatis, suscipit magna sed, consequat neque. Sed elit lorem, 
 
 Praesent porttitor a orci quis consequat. </p>
  
-<p><a href="#top">Наверх</a></p>
+<p align="right"><a href="#top">Наверх</a></p>
 
 <h2>Заголовок 2</h2>
 
 <a name="Заголовок 2"></a>
-<p> Curabitur non risus placerat, consequat magna facilisis, accumsan risus. Vivamus pulvinar enim justo, in tristique orci egestas in. Sed in lectus id mi mollis faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean viverra, nibh a vehicula iaculis, tellus magna maximus lacus, venenatis dapibus dui lacus quis leo. Cras sagittis, turpis id consectetur vehicula, metus felis bibendum justo, et tempor mauris ligula eu dui. Aliquam ornare augue vitae lacus sodales hendrerit. Suspendisse malesuada ut lacus ut mattis. Quisque in enim pulvinar, posuere ligula in, porta erat. Proin sit amet velit in ante pellentesque varius. Etiam consectetur nulla eu commodo auctor. Proin dignissim interdum molestie.
+<p align="justify"> Curabitur non risus placerat, consequat magna facilisis, accumsan risus. Vivamus pulvinar enim justo, in tristique orci egestas in. Sed in lectus id mi mollis faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean viverra, nibh a vehicula iaculis, tellus magna maximus lacus, venenatis dapibus dui lacus quis leo. Cras sagittis, turpis id consectetur vehicula, metus felis bibendum justo, et tempor mauris ligula eu dui. Aliquam ornare augue vitae lacus sodales hendrerit. Suspendisse malesuada ut lacus ut mattis. Quisque in enim pulvinar, posuere ligula in, porta erat. Proin sit amet velit in ante pellentesque varius. Etiam consectetur nulla eu commodo auctor. Proin dignissim interdum molestie.
 
 Phasellus feugiat risus eros, sed egestas augue congue non. Phasellus id nunc justo. Quisque ut est quam. Pellentesque tempus sit amet magna a scelerisque. Fusce id leo quis quam egestas viverra. Curabitur et volutpat lectus. Curabitur eu risus eget lectus pulvinar molestie sed non eros. Suspendisse potenti. Fusce laoreet nulla et neque facilisis, at placerat magna lacinia. Nunc bibendum eget tellus et laoreet. Nam et ante eget dolor sollicitudin eleifend at nec risus. Donec efficitur sit amet ipsum eget tincidunt. Duis rutrum eget leo quis tempus.
 
@@ -39,25 +39,25 @@ Pellentesque in porta arcu. Etiam ut placerat libero. Nulla et sodales libero, n
 
 Fusce nec erat erat. Pellentesque in lorem at diam tristique hendrerit vel vel ante. Curabitur sed leo nisl. Nulla volutpat convallis dolor non accumsan. Pellentesque non aliquam dui, vel laoreet nisi. Pellentesque ac turpis commodo, maximus turpis id, tincidunt elit. Curabitur quis lacus ut justo lacinia aliquam. Praesent quis pharetra sapien. </p>
 
-<p>Cras sem tortor, porttitor sed semper nec, faucibus at leo. Fusce quis lectus nisi. Etiam vulputate viverra est, sed semper lacus commodo sit amet. Proin vestibulum mauris vitae velit malesuada, sed lacinia erat fermentum. Praesent luctus blandit felis, ut molestie lacus. Donec at volutpat ligula, eu varius enim. Duis nec dapibus mauris, ac sodales lorem. Nulla vitae vulputate ligula, ut auctor lorem. </p>
+<p align="justify">Cras sem tortor, porttitor sed semper nec, faucibus at leo. Fusce quis lectus nisi. Etiam vulputate viverra est, sed semper lacus commodo sit amet. Proin vestibulum mauris vitae velit malesuada, sed lacinia erat fermentum. Praesent luctus blandit felis, ut molestie lacus. Donec at volutpat ligula, eu varius enim. Duis nec dapibus mauris, ac sodales lorem. Nulla vitae vulputate ligula, ut auctor lorem. </p>
 
-<p>In mi leo, viverra vitae risus nec, congue dapibus lorem. Suspendisse vitae dolor sed leo vestibulum convallis vitae sed ligula. Etiam nec magna in arcu tempor dictum. Suspendisse blandit nunc eget libero placerat pulvinar at ac lacus. Fusce hendrerit tortor in auctor efficitur. Suspendisse finibus posuere leo, non tincidunt felis faucibus eu. Morbi cursus tempus finibus. Quisque vel faucibus nisi. Quisque quis eleifend mi. Suspendisse odio urna, imperdiet sit amet interdum nec, efficitur et nisi.
+<p align="justify">In mi leo, viverra vitae risus nec, congue dapibus lorem. Suspendisse vitae dolor sed leo vestibulum convallis vitae sed ligula. Etiam nec magna in arcu tempor dictum. Suspendisse blandit nunc eget libero placerat pulvinar at ac lacus. Fusce hendrerit tortor in auctor efficitur. Suspendisse finibus posuere leo, non tincidunt felis faucibus eu. Morbi cursus tempus finibus. Quisque vel faucibus nisi. Quisque quis eleifend mi. Suspendisse odio urna, imperdiet sit amet interdum nec, efficitur et nisi.
 
 Cras hendrerit et odio eu ultrices. Vestibulum sit amet dolor sodales, posuere velit eget, hendrerit massa. Aenean eget mi consectetur, malesuada est eu, sodales magna. Sed erat ante, viverra vestibulum accumsan quis, hendrerit at est. Nam eu malesuada neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ullamcorper augue lectus, vel lobortis magna condimentum quis. Nullam interdum metus in quam eleifend, in sodales risus volutpat. Proin elementum dui id dapibus dapibus. Etiam quis egestas nunc, ornare efficitur magna. Donec eu velit in massa rhoncus eleifend.
 
 Morbi sagittis sem sed euismod aliquam. Pellentesque tempor luctus libero. Duis non justo et tortor finibus dignissim non vel urna. Fusce in velit at neque interdum vehicula vitae eget turpis. Sed id imperdiet erat. Donec id eleifend felis, sit amet faucibus mi. Nam a ex eu mauris consequat mollis id vitae magna. Donec vel consectetur enim. In in aliquam purus. Nam aliquam tortor nec quam molestie, non placerat mauris euismod. Sed viverra sollicitudin orci, ut rhoncus eros rutrum nec. Fusce vehicula neque urna, sed varius velit maximus vel. Nulla id volutpat elit, id mollis turpis. Cras sollicitudin fringilla metus. Nulla fringilla nulla lectus, ac efficitur purus egestas quis. Aliquam convallis varius justo, vitae lacinia neque lobortis ut. </p>
 
-<p><a href="#top">Наверх</a></p>
+<p align="right"><a href="#top">Наверх</a></p>
 
 <h2><a name="Заголовок 3"></a>Заголовок 3</h2>
 
-<p>Curabitur eget suscipit ligula. Suspendisse sit amet vestibulum massa. Proin scelerisque nisl at posuere iaculis. Cras a lorem vel enim venenatis fringilla commodo nec mi. In neque quam, tincidunt ac dignissim at, fringilla id lectus. Mauris suscipit, nisi quis vehicula iaculis, quam risus rutrum nibh, luctus convallis ex odio quis leo. Etiam suscipit orci at ullamcorper congue.
+<p align="justify">Curabitur eget suscipit ligula. Suspendisse sit amet vestibulum massa. Proin scelerisque nisl at posuere iaculis. Cras a lorem vel enim venenatis fringilla commodo nec mi. In neque quam, tincidunt ac dignissim at, fringilla id lectus. Mauris suscipit, nisi quis vehicula iaculis, quam risus rutrum nibh, luctus convallis ex odio quis leo. Etiam suscipit orci at ullamcorper congue.
 
 Pellentesque eu sodales nunc. Mauris in risus a nunc consectetur ultricies. Morbi vitae velit felis. Aliquam erat volutpat. Fusce eget vulputate velit. Etiam ac elit quis enim dignissim suscipit. Cras fringilla, nisl quis iaculis tempor, justo nisi imperdiet ipsum, vitae ornare arcu justo at odio. Pellentesque magna tortor, ultricies sit amet est quis, vulputate vulputate ex. Curabitur dictum lectus et lectus cursus ullamcorper. Vestibulum gravida euismod odio, vitae tincidunt est viverra pellentesque. Donec mauris magna, egestas vel dolor sed, egestas dapibus tellus. Sed nec lectus quis sem volutpat pharetra. 
 
 Phasellus eu ipsum sed arcu faucibus suscipit eget vitae dolor. Etiam lacinia lacinia nibh ac euismod. In vitae cursus purus. Nulla lacinia imperdiet sapien non interdum. Quisque ac ex in ante ultricies cursus ac et lectus. Nunc sollicitudin nulla quis vulputate efficitur. Pellentesque a sollicitudin neque, vel ultrices eros.</p>
 
-<p><a href="#top">Наверх</a></p>
+<p align="right"><a href="#top">Наверх</a></p>
 
 </body>
 
