--- a/childbook.html
+++ b/childbook.html
@@ -8,22 +8,25 @@
  </head>
 <body>
  <h1>CHILDBOOK</h1>  
- <p><img src="blob:chrome-untrusted://media-app/0e3384dc-f46c-45ce-819f-577b192ec823" alt="машинка"></p>
+ <p><img src="машинка.png" alt="машинка" title="машинка"></p>
+ <!--формат png т.к. картинка с небольшим количеством цветов-->
  <p align="justify">За рулем сижу довольный &mdash; <br>
  Ездить просто и легко!<br>
  Только руль чуть-чуть огромный<br>
  И педали далеко.</p>
- 
 
- <p><img src="blob:chrome-untrusted://media-app/ab832f75-308c-4df1-9ef9-141a48941509" alt="поезд"></p>
- <p align="justify">Мне купили <strong>паровозик,</strong>,<br>
+
+ <p><img src="поезд.jpg" alt="поезд" title="поезд"></p>
+ <!--формат jpg для сохранения качества фотографии-->
+ <p align="justify">Мне купили <strong>паровозик,</strong><br>
  Cразу два вагона возит.<br>
  Я включу его, и он<br>
  За собой везет вагон.<br>
  Вот бы мне в нем прокатиться,<br>
  Только жаль &mdash; не поместиться.</p>
 
- <p><img src="blob:chrome-untrusted://media-app/c9860a9c-9648-4365-a7e2-7d2358ffe6c6" alt="палитра"></p>
+ <p><img src="палитра.gif" alt="палитра" title="палитра"></p>
+ <!--формат gif т.к. картинка простая,всего несколько цветов-->
  <p align="justify">Нарисую я в альбоме <br>
  <em>Голубое</em> море,<br>
  <em>Белый парус</em> над волною<br>
