font styles added

--- a/font_gwf.html
+++ b/font_gwf.html
@@ -13,38 +13,40 @@
    <style> H1 {
         color: red;
         font-family: 'Marck Script', cursive; 
-        font-size: 30px;
+        font-size: 20px;
         word-spacing: 50px;
         font-weight: bold;}
          H2{
             color: black;
             font-family: 'Marck Script';
-            font-size: 25px;
+            font-size: 16px;
             letter-spacing: 10px;
             font-weight: bold;
             font-style: italic;}
             div{
                 color: grey;
                 font-family: 'Zen Kurenaido', sans-serif;
-                font-size: 15px;
+                font-size: 14px;
                 font-weight: normal;
                 font-style:normal;
                 line-height: 2;
-                width: 35%;
+                width: 40%;
                 height: 20%;
                 border-style: solid;
-                border-color: black;
-                border-width: 3px;
+                border-color: grey;
+                border-width: 2px;
+                margin-top: 7px;
                 
             }
     </style>
     
 </head>
 <body>
-
+<div align="center"; style="border: grey double 3px; line-height: 1;">
     <h1>Сергей Есенин</h1>
     <h2>Поет зима — аукает…</h2>
-<div>
+</div>
+<div align="center">
 <p>Поет <span style="color: #00B9FE; font-weight: bold; font-style: oblique; font-family: 'Marck Script'; font-size: larger;">зима</span> — аукает, <br>
 Мохнатый лес баюкает<br>
 Стозвоном сосняка.<br>
@@ -72,8 +74,8 @@
 И снится им прекрасная,<br>
 В улыбках солнца ясная<br>
 Красавица <span style="color: blueviolet; font-weight: bold; font-style: oblique; font-family:'Marck Script'; font-size: large;">весна</span>.</p>
-</div>
-<p>1910 г.</p>
 
+<p>1910 г.</p>
+</div>
 </body>
 </html>
