--- a/maket_div.html
+++ b/maket_div.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ФУТБОЛ</title>
 </head>
+
 <body>
-    
+    <div style="background: #6699FF; padding: 20px; font-size: medium; font-style: normal; text-align: center; text-transform: uppercase;">Привет участникам соревнований!</div>
+    <div style="border: solid blue 1px; ">
+    <div style="border: solid green 1px; width: 20%; padding: 30px; text-align: left; float: left; background-color: yellow; background-repeat: repeat-x;">Site Menu</div>
+    <div style="border: solid red 1px; margin-left: 26%; padding: 30px; text-align: left; background: url(ball.png) right repeat-y">Text
+
+    Футбо́л — командный вид спорта, в котором целью является забить мяч в
+    ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В
+    настоящее время самый популярный и массовый вид спорта в мире.
+    Игрок, играющий в эту игру, — футболи́ст.
+    Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из них более 20
+    миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных клубов.
+
+    По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило 250 млн человек,
+    что соответствует 4,1 % населения Земли.</div>
+    <div style="clear: both; background-color: #6699FF; padding: 20px; font-size: medium; font-style: normal; text-align: center; text-transform: uppercase;">Pustoj</div>
+</div>
 </body>
+
 </html>
