--- a/maket_div.html
+++ b/maket_div.html
@@ -9,22 +9,42 @@
 </head>
 
 <body>
-    <div style="background: #6699FF; padding: 20px; font-size: medium; font-style: normal; text-align: center; text-transform: uppercase;">Привет участникам соревнований!</div>
-    <div style="border: solid blue 1px; ">
-    <div style="border: solid green 1px; width: 20%; padding: 30px; text-align: left; float: left; background-color: yellow; background-repeat: repeat-x;">Site Menu</div>
-    <div style="border: solid red 1px; margin-left: 26%; padding: 30px; text-align: left; background: url(ball.png) right repeat-y">Text
+    <div
+        style="background: #86DAFF; padding: 20px;text-transform: uppercase; font-size: 25px;color:  #000066; text-align: center;">
+        Привет участникам соревнований!</div>
+    <div style="border: solid blue 1px;">
+        <div
+            style="width: 25%; padding: 5px; text-align: center; float: left; box-sizing: border-box; background: yellow 25% repeat-y;">
+            Site Menu</div>
+        <div
+            style="border: solid red 1px; margin-left: 25%; padding: 10px; text-align: justify; background: url(ball.png) right repeat-y">
+            <div style="float: left; margin: 5px;"><img src="football.png" alt="football"></div>
 
-    Футбо́л — командный вид спорта, в котором целью является забить мяч в
-    ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В
-    настоящее время самый популярный и массовый вид спорта в мире.
-    Игрок, играющий в эту игру, — футболи́ст.
-    Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из них более 20
-    миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных клубов.
+            Футбо́л — командный вид спорта, в котором целью является забить мяч в
+            ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника.
+            В настоящее время самый популярный и массовый вид спорта в мире.
+            Игрок, играющий в эту игру, — футболи́ст.<br>
 
-    По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило 250 млн человек,
-    что соответствует 4,1 % населения Земли.</div>
-    <div style="clear: both; background-color: #6699FF; padding: 20px; font-size: medium; font-style: normal; text-align: center; text-transform: uppercase;">Pustoj</div>
-</div>
+            Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из них более 20
+            миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных клубов.<br>
+
+            По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило 250 млн
+            человек,что соответствует 4,1 % населения Земли. В распределении по странам на первом месте по числу
+            играющих в
+            футбол США (примерно 18 миллионов, из которых 40 % женщины), затем идут Индонезия (10 миллионов), Мексика
+            (7,4 миллиона), Китай (7,2 миллиона), Бразилия (7 миллионов), Германия (6,2 миллиона), Бангладеш (5,2
+            миллиона), Италия (4 миллиона), Россия (3,8 миллиона). Однако количество футболистов в той или иной стране
+            вовсе не говорит о качестве футбола в разных частях мира. Так, чемпионаты мира по футболу выигрывали
+            исключительно европейские и южноамериканские сборные, а в Уругвае, который является двукратным победителем
+            Кубка мира ФИФА, живёт меньше человек, чем в России зарегистрировано футболистов.<br>
+
+            В июле 2017 года Международная федерация футбола (ФИФА) заявила о планах к 2026 году увлечь футболом 60 %
+            населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.
+        </div></div>
+        <div
+            style="clear: both; background-color: #86DAFF; padding: 20px; text-transform: uppercase; font-size: 25px;color: #000066; text-align: center;">
+            Главное не победа, а участие!</div>
+    </div>
 </body>
 
 </html>
