--- a/maket_div.html
+++ b/maket_div.html
@@ -12,38 +12,59 @@
     <div
         style="background: #86DAFF; padding: 20px;text-transform: uppercase; font-size: 25px;color:  #000066; text-align: center;">
         Привет участникам соревнований!</div>
-    <div style="border: solid blue 1px;">
+    <div style="background-color: yellow;">
         <div
-            style="width: 25%; padding: 5px; text-align: center; float: left; box-sizing: border-box; background: yellow 25% repeat-y;">
-            Site Menu</div>
-        <div
-            style="border: solid red 1px; margin-left: 25%; padding: 10px; text-align: justify; background: url(ball.png) right repeat-y">
+            style="width: 25%; padding: 5px; text-align: center; float: left; box-sizing: border-box; background: transparent 25% repeat-y;">
+            <ul style="text-align: left; color: #000066;">
+            <li>Биатлон</li>
+            <li>Футбол</li>
+            <li>Хоккей</li>
+            <li>Стрельба</li>
+            <li>Конькобежный спорт</li>
+            <li>Художественная гимнастика</li>
+            <li>Фигурное катание</li>
+            <li>Синхронное плавание</li>
+            <li>Прыжки в высоту</li>
+        </ul>
+        </div>
+        <div style="margin-left: 25%; background: white">
+            <div style="background: url(ball.png) right top repeat-y;">
             <div style="float: left; margin: 5px;"><img src="football.png" alt="football"></div>
+            <div style="padding: 5px; text-align: justify; background: transparent;">
+                Футбо́л — командный вид спорта, в котором целью является забить мяч в
+                ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда
+                соперника.
+                В настоящее время самый популярный и массовый вид спорта в мире.
+                Игрок, играющий в эту игру, — футболи́ст.<br>
 
-            Футбо́л — командный вид спорта, в котором целью является забить мяч в
-            ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника.
-            В настоящее время самый популярный и массовый вид спорта в мире.
-            Игрок, играющий в эту игру, — футболи́ст.<br>
+                Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из них
+                более 20
+                миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных клубов.<br>
 
-            Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из них более 20
-            миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных клубов.<br>
+                По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило 250
+                млн
+                человек,что соответствует 4,1 % населения Земли. В распределении по странам на первом месте по числу
+                играющих в
+                футбол США (примерно 18 миллионов, из которых 40 % женщины), затем идут Индонезия (10 миллионов),
+                Мексика
+                (7,4 миллиона), Китай (7,2 миллиона), Бразилия (7 миллионов), Германия (6,2 миллиона), Бангладеш (5,2
+                миллиона), Италия (4 миллиона), Россия (3,8 миллиона). Однако количество футболистов в той или иной
+                стране
+                вовсе не говорит о качестве футбола в разных частях мира. Так, чемпионаты мира по футболу выигрывали
+                исключительно европейские и южноамериканские сборные, а в Уругвае, который является двукратным
+                победителем
+                Кубка мира ФИФА, живёт меньше человек, чем в России зарегистрировано футболистов.<br>
 
-            По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило 250 млн
-            человек,что соответствует 4,1 % населения Земли. В распределении по странам на первом месте по числу
-            играющих в
-            футбол США (примерно 18 миллионов, из которых 40 % женщины), затем идут Индонезия (10 миллионов), Мексика
-            (7,4 миллиона), Китай (7,2 миллиона), Бразилия (7 миллионов), Германия (6,2 миллиона), Бангладеш (5,2
-            миллиона), Италия (4 миллиона), Россия (3,8 миллиона). Однако количество футболистов в той или иной стране
-            вовсе не говорит о качестве футбола в разных частях мира. Так, чемпионаты мира по футболу выигрывали
-            исключительно европейские и южноамериканские сборные, а в Уругвае, который является двукратным победителем
-            Кубка мира ФИФА, живёт меньше человек, чем в России зарегистрировано футболистов.<br>
-
-            В июле 2017 года Международная федерация футбола (ФИФА) заявила о планах к 2026 году увлечь футболом 60 %
-            населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.
-        </div></div>
-        <div
-            style="clear: both; background-color: #86DAFF; padding: 20px; text-transform: uppercase; font-size: 25px;color: #000066; text-align: center;">
-            Главное не победа, а участие!</div>
+                В июле 2017 года Международная федерация футбола (ФИФА) заявила о планах к 2026 году увлечь футболом 60
+                %
+                населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.<br>
+                 <div style="font-style: italic; text-align: right;"> &copy; Википедия</span>
+            </div>
+        </div>
+    </div></div>
+    <div
+        style="clear: both; background-color: #86DAFF; padding: 20px; text-transform: uppercase; font-size: 25px;color: #000066; text-align: center;">
+        Главное не победа, а участие!</div>
     </div>
 </body>
 
