--- a/maket_div.html
+++ b/maket_div.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ФУТБОЛ</title>
+
 </head>
 
 <body>
@@ -14,57 +15,85 @@
         Привет участникам соревнований!</div>
     <div style="background-color: yellow;">
         <div
-            style="width: 25%; padding: 5px; text-align: center; float: left; box-sizing: border-box; background: transparent 25% repeat-y;">
+            style="width: 250px; padding: 5px; text-align: center; float: left; box-sizing: border-box; background: transparent 250px repeat-y;">
             <ul style="text-align: left; color: #000066;">
-            <li>Биатлон</li>
-            <li>Футбол</li>
-            <li>Хоккей</li>
-            <li>Стрельба</li>
-            <li>Конькобежный спорт</li>
-            <li>Художественная гимнастика</li>
-            <li>Фигурное катание</li>
-            <li>Синхронное плавание</li>
-            <li>Прыжки в высоту</li>
-        </ul>
+                <h2 style="line-height: 15px; font-size: medium;">Виды спорта:</h2>
+                <a href="http://ru.sport-wiki.org/vidy-sporta/">
+                    <li>Биатлон</li>
+                    <li>Футбол</li>
+                    <li>Хоккей</li>
+                    <li>Стрельба</li>
+                    <li>Конькобежный спорт</li>
+                    <li>Художественная гимнастика</li>
+                    <li>Фигурное катание</li>
+                    <li>Синхронное плавание</li>
+                    <li>Прыжки в высоту</li>
+                    <li>Бокс</li>
+                    <li>Волейбол</li>
+                    <li>Гандбол</li>
+                    <li>Кёрлинг</li>
+                    <li>Теннис</li>
+                    <li>Настольный теннис</li>
+                    <li>Фехтование</li>
+                    <li>Акробатика</li>
+                    <li>Водное поло</li>
+                    <li>Горнолыжный спорт</li>
+                    <li>Дзюдо</li>
+                    <li>Гребля</li>
+                    <li>Дартс</li>
+                </a>
+            </ul>
         </div>
-        <div style="margin-left: 25%; background: white">
+        <div style="margin-left: 250px; background: white">
             <div style="background: url(ball.png) right top repeat-y;">
-            <div style="float: left; margin: 5px;"><img src="football.png" alt="football"></div>
-            <div style="padding: 5px; text-align: justify; background: transparent;">
-                Футбо́л — командный вид спорта, в котором целью является забить мяч в
-                ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда
-                соперника.
-                В настоящее время самый популярный и массовый вид спорта в мире.
-                Игрок, играющий в эту игру, — футболи́ст.<br>
+                <div style="float: left; width: 100%; display: inline-block; text-align: center;">
+                    <h1 style="font:bold; text-transform: uppercase;">Футбол</h1>
+                </div><br>
+                <div style="float: left; margin: 5px;"><img src="football.png" alt="football"></div>
+                <div style="padding: 5px; text-align: justify; background: transparent;">
 
-                Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из них
-                более 20
-                миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных клубов.<br>
+                    <p>Футбо́л — командный вид спорта, в котором целью является забить мяч в
+                        ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда
+                        соперника.
+                        В настоящее время самый популярный и массовый вид спорта в мире.
+                        Игрок, играющий в эту игру, — футболи́ст.</p>
 
-                По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило 250
-                млн
-                человек,что соответствует 4,1 % населения Земли. В распределении по странам на первом месте по числу
-                играющих в
-                футбол США (примерно 18 миллионов, из которых 40 % женщины), затем идут Индонезия (10 миллионов),
-                Мексика
-                (7,4 миллиона), Китай (7,2 миллиона), Бразилия (7 миллионов), Германия (6,2 миллиона), Бангладеш (5,2
-                миллиона), Италия (4 миллиона), Россия (3,8 миллиона). Однако количество футболистов в той или иной
-                стране
-                вовсе не говорит о качестве футбола в разных частях мира. Так, чемпионаты мира по футболу выигрывали
-                исключительно европейские и южноамериканские сборные, а в Уругвае, который является двукратным
-                победителем
-                Кубка мира ФИФА, живёт меньше человек, чем в России зарегистрировано футболистов.<br>
+                    <p>Согласно заявлению ФИФА, в 2001 году в футбол на планете играло около 250 миллионов человек. Из
+                        них
+                        более 20
+                        миллионов — женщины. Зарегистрировано около 1,5 миллиона команд и 300 000 профессиональных
+                        клубов.</p>
 
-                В июле 2017 года Международная федерация футбола (ФИФА) заявила о планах к 2026 году увлечь футболом 60
-                %
-                населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.<br>
-                 <div style="font-style: italic; text-align: right;"> &copy; Википедия</span>
+                    По заявлению президента ФИФА Й. Блаттера, общее количество игроков в мире в мае 2004 г. составило
+                    250
+                    млн
+                    человек,что соответствует 4,1 % населения Земли. В распределении по странам на первом месте по числу
+                    играющих в
+                    футбол США (примерно 18 миллионов, из которых 40 % женщины), затем идут Индонезия (10 миллионов),
+                    Мексика
+                    (7,4 миллиона), Китай (7,2 миллиона), Бразилия (7 миллионов), Германия (6,2 миллиона), Бангладеш
+                    (5,2
+                    миллиона), Италия (4 миллиона), Россия (3,8 миллиона). Однако количество футболистов в той или иной
+                    стране
+                    вовсе не говорит о качестве футбола в разных частях мира. Так, чемпионаты мира по футболу выигрывали
+                    исключительно европейские и южноамериканские сборные, а в Уругвае, который является двукратным
+                    победителем
+                    Кубка мира ФИФА, живёт меньше человек, чем в России зарегистрировано футболистов.
+
+                    <p>В июле 2017 года Международная федерация футбола (ФИФА) заявила о планах к 2026 году увлечь
+                        футболом
+                        60
+                        %
+                        населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.</p>
+                    <div style="font-style: italic; text-align: right;"> &copy; Википедия</span>
+                        <div style="clear: both;"></div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div></div>
-    <div
-        style="clear: both; background-color: #86DAFF; padding: 20px; text-transform: uppercase; font-size: 25px;color: #000066; text-align: center;">
-        Главное не победа, а участие!</div>
+        <div
+            style="clear: both; background-color: #86DAFF; padding: 20px; text-transform: uppercase; font-size: 25px;color: #000066; text-align: center;">
+            Главное не победа, а участие!</div>
     </div>
 </body>
 
