--- a/maket_div.html
+++ b/maket_div.html
@@ -6,18 +6,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ФУТБОЛ</title>
+    <style>
+        .header,
+        .footer {
+            background: #86DAFF;
+            padding: 20px;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 25px;
+            font-weight: bold;
+            color: #000066;
+        }
+.footer{
+    clear: both;
+}
+        .menu {
+            box-sizing: border-box;
+            width: 250px;
+            padding: 5px;
+            float: left;
+            text-align: center;
+            background: transparent 250px repeat-y
+        }
 
+        .football {
+            width: 100%;
+            float: left;
+            display: inline-block;
+            text-align: center;
+            font: 15px bold;
+            text-transform: uppercase;
+        }
+
+        .image {
+            float: left;
+            margin: 5px;
+        }
+
+        .text {
+            padding: 5px;
+            text-align: justify;
+            background: transparent;
+        }
+
+        #list {
+            text-align: left;
+            color: #000066;
+        }
+
+        .balls {
+            background: url(ball.png) right top repeat-y;
+        }
+
+        #h1 {
+            font-size: 15px;
+        }
+    </style>
 </head>
 
 <body>
-    <div
-        style="background: #86DAFF; padding: 20px;text-transform: uppercase; font-size: 25px;color:  #000066; text-align: center;">
-        Привет участникам соревнований!</div>
+    <div class="header"> Привет участникам соревнований!</div>
     <div style="background-color: yellow;">
-        <div
-            style="width: 250px; padding: 5px; text-align: center; float: left; box-sizing: border-box; background: transparent 250px repeat-y;">
-            <ul style="text-align: left; color: #000066;">
-                <h2 style="line-height: 15px; font-size: medium;">Виды спорта:</h2>
+        <div class="menu">
+            <ul id="list">
+                <h1 id="h1">Виды спорта:</h1>
                 <a href="http://ru.sport-wiki.org/vidy-sporta/">
                     <li>Биатлон</li>
                     <li>Футбол</li>
@@ -45,12 +97,12 @@
             </ul>
         </div>
         <div style="margin-left: 250px; background: white">
-            <div style="background: url(ball.png) right top repeat-y;">
-                <div style="float: left; width: 100%; display: inline-block; text-align: center;">
-                    <h1 style="font:bold; text-transform: uppercase;">Футбол</h1>
-                </div><br>
-                <div style="float: left; margin: 5px;"><img src="football.png" alt="football"></div>
-                <div style="padding: 5px; text-align: justify; background: transparent;">
+            <div class="balls">
+                <div class="football">
+                    <h2>Футбол</h2>
+                </div>
+                <div class="image"><img src="football.png" alt="football"></div>
+                <div class="text">
 
                     <p>Футбо́л — командный вид спорта, в котором целью является забить мяч в
                         ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда
@@ -85,15 +137,13 @@
                         60
                         %
                         населения Земли. В развитие футбола ФИФА намерена вложить 4 миллиарда долларов.</p>
-                    <div style="font-style: italic; text-align: right;"> &copy; Википедия</span>
+                    <p style="font-style: italic; text-align: right;"> &copy; Википедия</p>
                         <div style="clear: both;"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <div
-            style="clear: both; background-color: #86DAFF; padding: 20px; text-transform: uppercase; font-size: 25px;color: #000066; text-align: center;">
-            Главное не победа, а участие!</div>
+        <div class="footer"> Главное не победа, а участие!</div>
     </div>
 </body>
 
