--- a/maket_table.html
+++ b/maket_table.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
         }
 
         #football {
-            font-size: 20px;
+            font-size: 19px;
             font-weight: bold;
             text-transform: uppercase;
             vertical-align: middle;
@@ -50,31 +50,31 @@
         <tr>
             <td rowspan="2" id="menu">
                 <h2 id="h2">Виды спорта:</h2>
-                <ul> 
+                <ul>
                     <a href="http://ru.sport-wiki.org/vidy-sporta/">
-                    <li>Биатлон</li>
-                    <li>Футбол</li>
-                    <li>Хоккей</li>
-                    <li>Стрельба</li>
-                    <li>Конькобежный спорт</li>
-                    <li>Художественная гимнастика</li>
-                    <li>Фигурное катание</li>
-                    <li>Синхронное плавание</li>
-                    <li>Прыжки в высоту</li>
-                    <li>Бокс</li>
-                    <li>Волейбол</li>
-                    <li>Гандбол</li>
-                    <li>Кёрлинг</li>
-                    <li>Теннис</li>
-                    <li>Настольный теннис</li>
-                    <li>Фехтование</li>
-                    <li>Акробатика</li>
-                    <li>Водное поло</li>
-                    <li>Горнолыжный спорт</li>
-                    <li>Дзюдо</li>
-                    <li>Гребля</li>
-                    <li>Дартс</li>
-                </a>
+                        <li>Биатлон</li>
+                        <li>Футбол</li>
+                        <li>Хоккей</li>
+                        <li>Стрельба</li>
+                        <li>Конькобежный спорт</li>
+                        <li>Художественная гимнастика</li>
+                        <li>Фигурное катание</li>
+                        <li>Синхронное плавание</li>
+                        <li>Прыжки в высоту</li>
+                        <li>Бокс</li>
+                        <li>Волейбол</li>
+                        <li>Гандбол</li>
+                        <li>Кёрлинг</li>
+                        <li>Теннис</li>
+                        <li>Настольный теннис</li>
+                        <li>Фехтование</li>
+                        <li>Акробатика</li>
+                        <li>Водное поло</li>
+                        <li>Горнолыжный спорт</li>
+                        <li>Дзюдо</li>
+                        <li>Гребля</li>
+                        <li>Дартс</li>
+                    </a>
                 </ul>
             </td>
             <th colspan="2" id="Football">
