--- a/LINKS_6a/links.html
+++ b/LINKS_6a/links.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links menu</title>
     <style>
+        [href*="google"]:hover{
+            color: red;
+        }
         .menu {
             width: 50%;
             height: 40px;
