--- a/CHESS_6b_6c/chess_6c_2.html
+++ b/CHESS_6b_6c/chess_6c_2.html
@@ -44,7 +44,7 @@
     <p id="kasparov">Гарри Каспаров</p>
     <p id="birthdate">Дата рождения: 13 апреля 1963 г.</p>
     <p id="dates">Чемпион мира: 1985-1993</p>
-    <img src="extref.png"><p id="link"> <a href="https://chesspro.ru/statistic/kasparov.shtml">Информация:</a></p>
+    <img src="extref.png" style="float: left; margin-right: 3px;"><p id="link"> <a href="https://chesspro.ru/statistic/kasparov.shtml">Информация:</a></p>
     <p id="text">Первый матч за звание чемпиона мира по шахматам Гарри Каспаров играл против чемпиона мира Анатолия
         Карпова. До
         этого они в разных официальных соревнованиях сыграли три партии, которые закончились вничью. Для победы
