--- a/LINKS_6a/links.html
+++ b/LINKS_6a/links.html
@@ -14,15 +14,15 @@
         .menu {
             width: 50%;
             height: 40px;
-            margin: 20px;
-            text-align: center;
+            margin: 20px 20px 20px 43px;
+            text-align: left;
         }
 
         .menu span {
             color: red;
             font-weight: bolder;
             font-size: 20px;
-            padding: 10px;
+            padding: 5px;
             line-height: 30px;
         }
 
