--- a/Home_work_6d/home_work_6d.html
+++ b/Home_work_6d/home_work_6d.html
@@ -17,6 +17,12 @@
             background-image: url(star1.png);
         }
 
+        div{
+            width: 400px;
+            height: 78px;
+            margin-top: 10px;
+        }
+
     </style>
 </head>
 
@@ -27,6 +33,7 @@
         <div class="star"></div>
         <div class="star"></div>
         <div class="star"></div>
+        
     </div>
 </body>
 
