--- a/MAKET_ADAPT.html
+++ b/MAKET_ADAPT.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Футбол</title>
     <style>
+        * {
+            margin: 0px;
+        }
+
         .header,
         .footer {
             background: #86DAFF;
@@ -33,7 +38,6 @@
         .football {
             width: 100%;
             float: left;
-            display: inline-block;
             text-align: center;
             font: 15px bold;
             text-transform: uppercase;
@@ -61,6 +65,10 @@
 
         #h1 {
             font-size: 15px;
+        }
+
+        .footer {
+            clear: both;
         }
     </style>
 </head>
@@ -147,4 +155,5 @@
     <div class="footer"> Главное не победа, а участие!</div>
     </div>
 </body>
+
 </html>
