--- a/MAKET_ADAPT.html
+++ b/MAKET_ADAPT.html
@@ -20,10 +20,12 @@
             font-size: 25px;
             font-weight: bold;
             color: #000066;
+            width: 100%;
         }
 
         .footer {
             clear: both;
+            width: 100%
         }
 
         .menu {
@@ -43,20 +45,29 @@
             text-transform: uppercase;
         }
 
-        .image {
+        #image {
             float: left;
             margin: 5px;
+
         }
 
         .text {
             padding: 5px;
             text-align: justify;
             background: transparent;
+            color: black;
+            font-size: 10px;
         }
+
 
         #list {
             text-align: left;
             color: #000066;
+        }
+
+        #white {
+            margin-left: 250px;
+            background: white
         }
 
         .balls {
@@ -69,6 +80,52 @@
 
         .footer {
             clear: both;
+        }
+
+        @media all and (max-width:500px) {
+
+            .header,
+            .footer {
+                padding: 5px;
+                font-size: 10px;
+                width: 100%;
+            }
+
+
+            .text {
+                text-align: justify;
+                color: blue;
+                font-size: 5px;
+            }
+
+            #image {
+                width: 99%;
+                margin: 2px;
+            }
+
+            .menu {
+                width: 100px;
+                font-size: 5px;
+                background-size: 100px;
+            }
+
+            #white {
+                margin-left: 100px;
+            }
+
+            .balls {
+                background: none;
+            }
+
+            #h1 {
+                font-size: 10px;
+            }
+
+            h2 {
+                font-size: 10px;
+            }
+
+
         }
     </style>
 </head>
@@ -105,12 +162,12 @@
                 </a>
             </ul>
         </div>
-        <div style="margin-left: 250px; background: white">
+        <div id="white">
             <div class="balls">
                 <div class="football">
                     <h2>Футбол</h2>
                 </div>
-                <div class="image"><img src="football.png" alt="football"></div>
+                <div><img id="image" src="football.png" alt="football"></div>
                 <div class="text">
 
                     <p>Футбо́л — командный вид спорта, в котором целью является забить мяч в
