--- a/maket_div.html
+++ b/maket_div.html
@@ -63,11 +63,22 @@
         #h1 {
             font-size: 15px;
         }
+        #club{
+            width: 20px;
+            height: 30px;
+            border: #000066;
+            background: greenyellow;
+            position: fixed;
+            right: 0;
+            top:50;
+        }
     </style>
 </head>
 
-<body>
+<body> 
+    
     <div class="header"> Привет участникам соревнований!</div>
+    <div #id="club"></div>
     <div style="background-color: yellow;">
         <div class="menu">
             <ul id="list">
@@ -147,6 +158,7 @@
     </div>
     <div class="footer"> Главное не победа, а участие!</div>
     </div>
+   
 </body>
 
 </html>
