--- a/MAKET_FORM.html
+++ b/MAKET_FORM.html
@@ -13,7 +13,7 @@
 
         #forma {
             width: 60%;
-            border: 4px double red;
+            border: none;
         }
 
         #namefield{
