--- a/MAKET_FLEX.html
+++ b/MAKET_FLEX.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKET FLEX</title>
     <style>
-        
+        .container{
+            display: flex;
+            border: solid red 1px;
+        }
+
     </style>
 </head>
 <body>
+    <div class="container"></div>
+    <header></header>
+    <menu></menu>
+    <article></article>
+    <section></section>
+    <footer></footer>
     
 </body>
 </html>
