--- a/maket_grid.html
+++ b/maket_grid.html
@@ -72,6 +72,9 @@
             float: left;
             margin: 5px;
         }
+
+        @media all and (max-width:500px) {
+            body .container {
     </style>
 </head>
 
