--- a/MAKET_FLEX.html
+++ b/MAKET_FLEX.html
@@ -36,7 +36,8 @@
         }
 
         .article {
-            background-color: white;
+            
+            background: url(ball.png) repeat-y top right;
             width: 78%;
             padding: 2px;
             box-sizing: border-box;
@@ -85,13 +86,17 @@
             
             }
 
-            .header {
+            .header, .footer {
                 display: none;
             }
 
             .image{
                 width: 98%;
                 margin-bottom: 7px;
+            }
+            .article{
+                background: none;
+                width: 100%;
             }
         }
     </style>
