--- a/maket_grid.html
+++ b/maket_grid.html
@@ -29,7 +29,7 @@
         .article {
             grid-column: 2;
             grid-row: 2;
-            background-color: white;
+            background: url(ball.png) repeat-y top right;
             padding: 2px;
             box-sizing: border-box;
             text-align: justify;
@@ -92,9 +92,13 @@
                 .article{
                     grid-row: 1;
                     grid-column: 1;
+                    background: none;
                 }
                 li{
                     display: inline;
+                }
+                .image{
+                    width: 98%;
                 }
 
             }
