--- a/anketa_if.html
+++ b/anketa_if.html
@@ -15,7 +15,7 @@
         let fullname = prompt('Введите ваше отчество')
         let age = prompt('Ваш возраст')
         let sex = confirm('Ваш пол мужской?')
-        alert('ФИО:' + name + firstname + fullname)
+        alert("ФИО:" + name + firstname + fullname)
         alert('ваш возраст в годах:' + age)
         alert('ваш возраст в днях:' + age * 365)
         alert('через 5 лет вам будет:' + (+age + +5))
