--- a/countries.html
+++ b/countries.html
@@ -21,7 +21,10 @@
     <div>
         <input type='button' value='удаление информации о стране' onclick='prompt("Введите название страны")'>
     </div>
+    
 <script>
+    let countriesH={};
+
 
 </script>
 
