--- a/anketa_if.html
+++ b/anketa_if.html
@@ -15,23 +15,27 @@
         let fullname = prompt('Введите ваше отчество')
         let age = prompt('Ваш возраст')
         let sex = confirm('Ваш пол мужской?')
-        alert("ФИО:" + name + firstname + fullname)
-        alert('ваш возраст в годах:' + age)
-        alert('ваш возраст в днях:' + age * 365)
-        alert('через 5 лет вам будет:' + (+age + +5))
         if (sex === true) {
             alert('ваш пол:' + 'Мужской');
         }
         else {
-            alert('ваш пол:' + 'Женский')
+            alert('ваш пол:' + 'Женский');
         }
-        if (age < 60) {
-            alert('вы на пенсии:' + 'нет')
+// я не понимаю, как присоеденить это в основную анкету
+          if (age < 60) {
+            alert('вы на пенсии:' + 'нет');
         }
         else {
-            alert('вы на пенсии:' + 'да')
-        }
-
+            alert('вы на пенсии:' + 'да');
+        }  
+        
+        alert("ФИО: " + name + firstname + fullname + '\n' +
+        'ваш возраст в годах: ' + age + '\n' +
+        'ваш возраст в днях:' + age * 365 + '\n' +
+        'через 5 лет вам будет:' + (+age + +5) + '\n' +
+        'ваш пол:' + sex)
+        // я не понимаю, как в анкете указать пол М или Ж?
+    
     </script>
 
 </body>
